# apple-crash-report-parser

./: .craft.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  parser.rs
tests/: test_snapshots.rs
tests/fixtures/: XCDYouTubeKit-54.txt  bruno.txt  handcrafted.txt  spaces.txt  xcode16.txt
tests/snapshots/: test_snapshots__XCDYouTubeKit-54.snap  test_snapshots__bruno.snap  test_snapshots__handcrafted.snap  test_snapshots__spaces.snap
