[package]
name = "apple-crash-report-parser"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

[features]
with_serde = ["uuid/serde", "chrono/serde", "serde"]

[dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"
uuid = { version = "0.7.1" }
chrono = { version = "0.4.6" }
serde = { version = "1.0.84", features = ["derive"], package = "serde", optional = true }
failure = "0.1.5"

[dev-dependencies]
serde_json = "1.0.34"
